refactor: add findForCorrelationId method on TransferProcessStore